# image_rotation

./: .gitignore
solution/: CMakeLists.txt
solution/include/file_operations/: file_operations.h
solution/include/image/: image.h  image_operations.h
solution/include/image/image_formats/: from_bmp.h  to_bmp.h
solution/include/image/image_formats/headers/: bmp_header.h
solution/include/statuse_codes/: status_enums.h
solution/src/: main.c
solution/src/file_operations/: file_operations.c
solution/src/image/: image.c  image_operations.c
solution/src/image/image_formats/bmp/: from_bmp.c  to_bmp.c
tester/: CMakeLists.txt
